Meet fixes
Added overflow-y: none in meet.css to remove the strange padding issue, then made it so the scrollbar for discussion is always at the bottom; displaying most recent message

--- a/cssFiles/meet.css
+++ b/cssFiles/meet.css
@@ -8,6 +8,7 @@
 
 body {
   overflow-x: hidden;
+  overflow-y: hidden;
   background-color: rgba(50,50,50);
 }
 
@@ -44,8 +45,6 @@ body {
 .discussion {
   position: absolute;
 	margin-top:8vh;
-	display: flex;
-	flex-direction: column;
   width: 100%;
   height:70vh;
   overflow-y: scroll;
